# NOMWeather

./: CMakeLists.txt  README.md
debian/: changelog  control  nomweather.postinst
desktop/: CMakeLists.txt  nomweather.desktop
src/: CMakeLists.txt  about.cpp  about.ui  assets.qrc  ctx.cpp  ctx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui
src/assets/: general_settings.xcf
src/lib/: config.cpp  config.h  http.cpp  http.h  openmeteo.cpp  openmeteo.h  utils.cpp  utils.h
src/qml/: AreaFlick.qml  DayItem.qml  Main.qml  main.qml
